ARROW-16796: [C++] Fix bad defaulting of ExecContext argument